# sqlite-kg-vec-mcp

./: .env.example  .gitignore  .gitmodules  .mcp.json  BENCHMARK.md  CLAUDE.md  COMPLETED_TASKS.md  LICENSE  LOGGING-KR.md  LOGGING.md  Makefile  OPENTELEMETRY_TRACE_PRINCIPLES.md  OPENTELEMETRY_USAGE.md  README-KR.md  README.md  TODO.md  pyproject.toml  setup.cfg
.claude/: settings.json
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt  remaining_test_failures.md
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  tasks.json
ann_benchmarks_adapter/: __init__.py  config.yml  sqlite_kg_hnsw.py
examples/: basic_usage.py  client_example.py  embedding_example.py  mcp_client.py  mcp_server.py  observability_example.py  ollama_knowledge_extraction.py  run_server.py  test_langfuse_simple.py
poc/: README.md
poc/config_loader/: config_loader.py  test_config_loader.py
poc/how-to-test-mcp/: server.py  test_server.py
poc/logging/: logging.py  test_logging.py
poc/metrics/: __init__.py  metrics.py  test_metrics.py
poc/sqlite-vector/: vector_poc.py
prompts/: README.md  knowledge_extraction.md  query_analysis.md  search_evaluation.md  search_navigation.md
scripts/: compare_hnsw_implementations.py  run_ann_benchmarks.py  run_hnsw_benchmark.py  setup_langfuse_prompts.py  visualize_benchmark_results.py
src/: __init__.py  main.py
src/adapters/: __init__.py  dto_mappers.py
src/adapters/database/: schema.py  sqlite_database.py
src/adapters/exceptions/: __init__.py  authentication.py  base.py  connection.py  data.py  timeout.py
src/adapters/fastmcp/: __init__.py  config.py  exceptions.py  refactored_server.py  server.py
src/adapters/graph/: entities.py  interactive_search.py  relationships.py
src/adapters/hnsw/: __init__.py  embedder_factory.py  embeddings.py  exceptions.py  hnsw.py  search.py  text_embedder.py
src/adapters/huggingface/: __init__.py  exceptions.py  text_embedder.py
src/adapters/llm/: __init__.py  knowledge_extractor.py  llm_service.py  text_embedder.py
src/adapters/monitoring/: __init__.py
src/adapters/ollama/: __init__.py  exceptions.py  nomic_embedder.py  ollama_client.py  ollama_knowledge_extractor.py  ollama_llm_service.py
src/adapters/openai/: __init__.py  text_embedder.py
src/adapters/repositories/: __init__.py  embedding_repository.py  entity_repository.py  relationship_repository.py  vector_index_repository.py
src/adapters/sqlite3/: __init__.py  connection.py  database.py  document_repository.py  exceptions.py  schema.py  transaction_context.py  transactions.py  vector_reader_impl.py  vector_retriever_impl.py  vector_store.py  vector_store_base.py  vector_writer_impl.py
src/adapters/streamlit/: __init__.py  app.py
src/adapters/testing/: __init__.py  text_embedder.py
src/adapters/vector/: embeddings.py  exceptions.py  nomic_embedder.py  search.py  sqlite_vector_store.py  text_embedder.py  vector_store.py
src/application/: __init__.py
src/common/: __init__.py  prompt_manager.py
src/common/config/: __init__.py  app.py  database.py  llm.py  loader.py  mcp.py  observability.py  validation_manager.py
src/common/logging/: __init__.py  config.py  request_context.py
src/common/observability/: __init__.py  context.py  decorators.py  integration.py  logger.py  otel_decorators.py  otel_setup.py  setup.py
src/common/validation/: __init__.py  config_validators.py  field_validators.py
src/config/: __init__.py  embedding_config.py  search_config.py
src/domain/: __init__.py
src/domain/config/: __init__.py  timeout_config.py  validation_config.py
src/domain/entities/: __init__.py  document.py  embedding.py  entity.py  knowledge_graph.py  node.py  relationship.py  search_result.py
src/domain/events/: __init__.py  base.py  document_processed.py  entity_created.py  node_created.py  relationship_created.py  search_completed.py
src/domain/exceptions/: __init__.py  base.py  document_exceptions.py  entity_exceptions.py  node_exceptions.py  relationship_exceptions.py  search_exceptions.py
src/domain/services/: __init__.py  document_persistence.py  document_processor.py  document_statistics.py  document_validation.py  knowledge_search.py
src/domain/value_objects/: __init__.py  document_id.py  document_metadata.py  entity_type.py  knowledge_extraction_result.py  node_id.py  relationship_id.py  relationship_type.py  search_criteria.py  search_result.py  vector.py
src/dto/: __init__.py  document.py  embedding.py  event.py  node.py  relationship.py  vector.py
src/graph/: entities.py  interactive_search.py  relationships.py
src/llm/: langfuse_prompts.py
src/ports/: __init__.py  admin_use_cases.py  database.py  document_repository.py  event_publisher.py  knowledge_extractor.py  knowledge_graph_use_cases.py  knowledge_search_use_cases.py  llm.py  llm_service.py  mappers.py  node_repository.py  notificator.py  observability.py  prompt_manager.py  relationship_repository.py  relationship_use_cases.py  search_use_cases.py  text_embedder.py  vector_reader.py  vector_retriever.py  vector_store.py  vector_writer.py
src/ports/primary/: __init__.py  search_use_cases.py
src/ports/repositories/: __init__.py  document.py  embedding_repository.py  (+2 more)
src/sqlite_kg_vec_mcp/: __init__.py
src/use_cases/: __init__.py  analytics.py  analytics_use_cases.py  document.py  document_use_cases.py  knowledge_search.py  node.py  node_use_cases.py  relationship.py
src/utils/: prompt_manager.py
src/vector/: embeddings.py  nomic_embedder.py  search.py
tests/: __init__.py  exceptions.py  test_all_features.py  test_graph.py  test_hnsw_benchmark.py  test_mcp_server.py  test_text_embedder.py
tests/e2e/: __init__.py  test_integration_scenario.py
tests/integration/: test_concurrency_issues.py  test_database_integration.py  test_document_transaction.py  test_logging_integration.py  test_resource_management.py
(+153 files in other folders)
