[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "sqlite-kg-vec-mcp"
version = "0.2.0"
description = "SQLite-based Knowledge Graph with Vector Search and MCP Server Interface using Hexagonal Architecture"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Neurumaru", email = "neurumaru@example.com" }
]
keywords = ["knowledge-graph", "vector-search", "mcp", "sqlite", "hexagonal-architecture", "langfuse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core dependencies
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    # MCP Server dependencies
    "fastmcp>=2.3.0",
    "mcp>=1.8.0",
    "exceptiongroup>=1.2.2",
    "httpx>=0.28.1",
    # Vector search and embeddings
    "hnswlib>=0.7.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    # LLM and integrations
    "ollama>=0.3.0",
    "langfuse>=2.0.0",
    # HTTP and utilities
    "requests>=2.25.0",
    "aiofiles>=23.0.0",
    "pydantic>=2.0.0",
    "openai>=1.97.1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.1.1",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    
    # Code quality
    "black>=24.1.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    
    # Development utilities
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

web = [
    # Streamlit web interface
    "streamlit>=1.28.0",
    "plotly>=5.15.0",
]

embeddings = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "cohere>=4.0.0",
]

monitoring = [
    "prometheus-client>=0.19.0",
    "structlog>=23.0.0",
]

all = [
    "sqlite-kg-vec-mcp[dev,embeddings,monitoring]"
]

[project.scripts]
sqlite-kg-vec-mcp = "src.main:main"

[project.urls]
Homepage = "https://github.com/neurumaru/sqlite-kg-vec-mcp"
Repository = "https://github.com/neurumaru/sqlite-kg-vec-mcp.git"
Issues = "https://github.com/neurumaru/sqlite-kg-vec-mcp/issues"
Documentation = "https://github.com/neurumaru/sqlite-kg-vec-mcp/blob/main/README.md"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.17.0",
]

# Testing configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = [".", "src"]
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]

# Type checking configuration
[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
show_error_codes = true

# Specific module configurations
[[tool.mypy.overrides]]
module = [
    "hnswlib.*",
    "sentence_transformers.*", 
    "openai.*",
    "anthropic.*",
    "fastmcp.*",
    "torch.*",
    "langfuse.*",
    "ollama.*",
    "numpy.*",
]
ignore_missing_imports = true

# Code formatting configuration
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests"]
known_first_party = ["src"]

# Linting configuration
[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501", "W503"]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:S101,S106",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Package sources for uv
[tool.uv.sources]
"sqlite-kg-vec-mcp" = { path = "." } 
